# bulk-mailer

./: .gitignore  README.md  confirm_mail_interactive.py  confirm_mail_stdout.py  mail_utils.py  main.py  person.py  pyproject.toml
generic_mailing/: envelope.py  mailer.py  result.py  types.py
personal_mailing/: envelope.py  mailer.py  result.py
src/: showcase_1.py
src/bulk_mailer/: main.py
src/bulk_mailer/entities/: __init__.py  entities.py
src/bulk_mailer/general/: envelope.py  mailer.py  queue.py  types.py
src/bulk_mailer/generic_mailing/: envelope.py  mailer.py  queue.py  types.py
src/bulk_mailer/personal/: __init__.py  envelope.py  mailer.py  queue.py  types.py
src/bulk_mailer/personal_mailing/: envelope.py  mailer.py  queue.py  types.py
src/bulk_mailer/utils/: __init__.py  confirm_mail_interactive.py  confirm_mail_stdout.py  utils.py
